# algorithm-rs

./: Cargo.toml  README.md
benches/: benchmark.rs
src/: binary_search.rs  lib.rs  main.rs  quicksort.rs  selection_sort.rs
