[package]
name = "algorithms"
version = "0.1.0"
authors = ["Justin Barclay <justincbarclay@gmail.com>"]
edition = "2018"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dev-dependencies]

criterion = "0.3.2"
rand = "0.7.2"

[[bench]]
name = "benchmark"
harness = false